[tool.poetry]
name = "metric-temporal-logic"
readme="README.md"
version = "0.1.7"
description = "A library for manipulating and evaluating metric temporal logic."
repository = "https://github.com/mvcisback/py-metric-temporal-logic"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "mtl" },
]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.3.0"
lenses = "^0.5.0"
discrete-signals = "^0.7.3"
parsimonious = "^0.8.1"


[tool.poetry.dev-dependencies]
hypothesis_cfg = {git = "git://github.com/mvcisback/hypothesis-cfg.git"}
hypothesis = "4.24.1"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.29"
coverage = "^4.5"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
