[tool.poetry]
name = "metric-temporal-logic"
readme="README.md"
version = "0.4.1"
description = "A library for manipulating and evaluating metric temporal logic."
repository = "https://github.com/mvcisback/py-metric-temporal-logic"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "mtl" },
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22"
lenses = "^0.5.0"
discrete-signals = "^0.8"
parsimonious = "^0.9.0"


[tool.poetry.dev-dependencies]
hypothesis_cfg = {git = "https://github.com/mvcisback/hypothesis-cfg.git"}
hypothesis = "^6.47.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
